Changelog
=========

1.1-dev0 - (unreleased)
---------------------------

1.0 - (2021-03-19)
------------------

* Blocks **@layout** endpoint
  [avoinea]