@@ -1,5 +1,6 @@
 """Module where all interfaces, events and exceptions live."""
 
+from zope.interface import Interface
 from zope.publisher.interfaces.browser import IDefaultBrowserLayer
 from plone.restapi.behaviors import IBlocks
 
@@ -8,5 +9,10 @@ class IEeaApiLayoutLayer(IDefaultBrowserLayer):
     """Marker interface that defines a browser layer."""
 
 
-class ILayoutBlocks(IBlocks):
+class IFixedLayoutBlocks(IBlocks):
     """Blocks with Layout (TTW, external, etc.)"""
+
+
+class IFixedLayoutBlockSerializationSync(Interface):
+    """ Sync block properties with Layout
+    """
